--- a/Backend-PO/appsettings.json
+++ b/Backend-PO/appsettings.json
@@ -5,8 +5,5 @@
 			"Microsoft.AspNetCore": "Warning"
 		}
 	},
-	"AllowedHosts": "*",
-	"ConnectionStrings": {
-		"DefaultConnection": "Host=localhost;Port=5432;Database=softskills;Username=postgres;Password=0206"
-	}
+	"AllowedHosts": "*"
 }
